--- a/docs/notes/3.2.0改造/3.2.0改造.md
+++ b/docs/notes/3.2.0改造/3.2.0改造.md
@@ -73,7 +73,11 @@ body.webp .index-firstScreenRoot-10LL- {
 
 ### 第一阶段
 
-我打算共用样式表，所以可能需要我的网页能爬取并获取那个*prefetch-A*，然后插入我的网页中，并暂时把原本的body中的内容添加一个半透明白色背景以增强可读性。
+先爬取主页，再爬取css，然后使用 *Shadow DOM*，把 *css-A* 经过`:host()`转换`body`后的内容插入，然后应用到对应的对象上。
+
+为了提高兼容性、融合度，同时降低耦合度，我计划使用专门的容器类来承载，原内容覆盖在最上层。
+
+为了解决引入背景图可能导致的可读性下降问题，我计划把原本的body中的内容添加一个半透明白色背景。
 
 #### 步骤
 
